horizontal scroll fixed

--- a/src/styles/components/Footer.styl
+++ b/src/styles/components/Footer.styl
@@ -6,7 +6,6 @@
     grid-template-columns: 1fr
     grid-template-areas "Deck" "Social" "Nav"
     position: absolute;
-    width: 100%;
     z-index: -1;
     .Footer__Deck
         grid-area Deck
@@ -72,7 +71,6 @@
 
 @media screen and (min-width 1024px)
     .Footer
-        width 100vw
         grid-template-columns: 4fr 5fr 4fr;
         grid-template-areas "Deck Nav Social";
         align-content: center
